--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Midterm Part 3</title>
+  <link rel="stylesheet" href="/css/style.css">
+
 </head>
+    <!--The body section or element contains all the information shown to the visitor-->    
 <body>
-  
+
+<header>    <!--The header shows my site title and a paragraph describing your talent and experience as web developer DONT COFUSE IT WITH THE "HEAD"-->
+  <h1>Ismail's WebDev Services</h1>
+
+  <p>Welcome Visitor, my name is Ismail Hassan. I am a professional Website Developer. (This entire site has been designed and coded by yours truly) I aim to help small businesses and help them with all there website-related needs! I have been designing websites and working with code since I was in the 7th Grade, and I promise you there is nothing more satisfying that seeing the fruit of your efforts and time. I love what I do and I try to make life easier for others as well. </p>
+  <img src="/img/laptop .avif"></a>
+</header>
+
+<main>    <!--The MAIN contains the main information of the site-->
+  <section> <!--Sites I did not make but I will brag about-->
+    <h1> Some sites I helped develop during my College years:</h1>
+    <ul> <!--Used (https://www.w3schools.com/html/html_links.asp) to help me make the hyperlinks-->
+      <li> <a href="https://www.nba.com/">The Site for the NBA!</a> </li>
+      <li> <a href="https://www.youtube.com/"">Everyone's fav, YOUTUBE!</a> </li>
+      <li> <a href="https://www.coolmathgames.com/">Every kids cure to Boredom, Cool Math Games!</a> </li>
+    </ul>
+  </section>
+  <section> <!--Some fake customer reviews-->
+    <h2>Some of the reviews I've recieved from the people I've worked with:</h2>
+    <ol>
+      <li> "Ismail's professional skills helped my small makreting agency skyrocket in popularity and helped me become a US President. Bravo, Ismail!" <br> -John F. Kennedy</li> <br>
+      <li> "With Ismail expertise we helped establish the Government of the United States of America, which at the time was a very small business but now is worth trillions. He defiently deserves some commision. Great Guy!" <br>-George Washington</li> <br>
+      <li>"I had 8 hours to chop down a tree, so I talked to Ismail for 7 hours and with his assistance and Website development skills, he was able to make me a website where he expressed my need for help and I got connected with someone in 5 Minutes and the tree was cut down and the day was saved. Turns out that guy knew someone who knew someone else and connected me with an marketing agency that helped me become a US President. All thanks to Ismail." <br> -Abraham Lincoln</li>
+    </ol>
+  </section>
+</main>
+
+<footer> <!--Contains my Copyright notice-->
+    <p class="no-underline">&copy; 2023 Ismail Hassan</p>
+</footer>
 </body>
 </html>
